1.6.4 (2014-4-12)
* Bugfixes
* Update gemspec to include all examples
* Release tests and other internal scripts

1.6.3 (2013-12-11)
* Stricter SSL: Update certs, use only approved ciphersuites, work around
  Ruby SSL bugs.
* Upgrade OAuth 1 tokens with DropboxClient.create_oauth2_access_token and
  DropboxClient.disable_oauth2_access_token.
* delta(): Add support for "path_prefix" parameter.

1.6.2 (2013-10-10)
* Put params in body for POST requests (they were being put in the URL).
  Fixes bug with /delta and really long cursors.

1.6.1 (2013-07-08)
* Fixed syntax error (Ruby 1.8.7 didn't mind, but Ruby 1.9 did).

1.6 (2013-07-07)
* Added OAuth 2 support (DropboxOAuth2Flow).  OAuth 1 still works.
* Fixed many minor bugs.

1.5.1 (2012-8-20)
* Fixed packaging.

1.5 (2012-8-15)
* Support for uploading large files via /chunked_upload

1.3.1 (2012-5-16)
* Increase metadata() file list limit to 25,000 (used to be 10,000).
* Use CGI.escape() instead of the deprecated URI.escape().

1.3 (2012-3-26)
* Add support for the /delta API.
* Add support for the "copy ref" API.

1.2 (2012-1-11)
* Adds a method to the SDK that returns the file metadata when downloading a
  file or its thumbnail.
* Validate server's SSL certificate against CAs in included certificate file.

1.1 (2011-10-17)
* Various bug fixes found during beta period
* Improved documentation
* Improved module structure
* Removed dependency on the oauth module, using plaintext authentication over https

1.0 (2011-8-16)
* Backwards compatibility broken
   - Changed interface
   - Change 'sandbox' references to 'app_folder'
* Updated SDK to Dropbox API Version 1, supporting all calls
   - Added 'rev' parameter to metadata and get_file
   - Added 'parent_rev' parameter to put_file
   - Added search, share, media, revisions, and restore
   - put_file uses /files_put instead of multipart POST
   - Removed methods for calls that were removed from v1 of the REST API
* Changed return format for calls