@@ -1,3 +1,5 @@
+* Add support for /previews endpoint.
+
 1.6.4 (2014-4-12)
 * Bugfixes
 * Update gemspec to include all examples
